# sprite_config_generator

./: .gitignore  CMakeLists.txt  README.md  cmakelists.txt  frogrilla.sprite.json
src/: main.c  main.cpp
